--- a/sample-travis.yml
+++ b/sample-travis.yml
@@ -18,17 +18,41 @@ cache:
 
 matrix:
   include:
+    - php: nightly
+      env: WP_VERSION=latest WP_MULTISITE=0
+    - php: nightly
+      env: WP_VERSION=latest WP_MULTISITE=1
     - php: 7.4
       env: WP_VERSION=latest WP_MULTISITE=0
+    - php: 7.4
+      env: WP_VERSION=latest WP_MULTISITE=1
+    - php: 7.3
+      env: WP_VERSION=latest WP_MULTISITE=0
+    - php: 7.3
+      env: WP_VERSION=latest WP_MULTISITE=1
+    - php: 7.2
+      env: WP_VERSION=latest WP_MULTISITE=0
+    - php: 7.2
+      env: WP_VERSION=latest WP_MULTISITE=1
+    - php: 7.1
+      env: WP_VERSION=latest WP_MULTISITE=0
+    - php: 7.1
+      env: WP_VERSION=latest WP_MULTISITE=1
+    - php: 7.0
+      env: WP_VERSION=latest WP_MULTISITE=0
+    - php: 7.0
+      env: WP_VERSION=latest WP_MULTISITE=1
+    - php: 5.6
+      env: WP_VERSION=latest WP_MULTISITE=0
+    - php: 5.6
+      env: WP_VERSION=latest WP_MULTISITE=1
+    - php: 5.6
+      env: WP_VERSION=4.0 WP_MULTISITE=0
+    - php: 5.6
+      env: WP_VERSION=4.0 WP_MULTISITE=1
 
 before_script:
   - export PATH="$HOME/.composer/vendor/bin:$PATH"
-  - |
-       if [[ ${TRAVIS_PHP_VERSION:0:2} == "7." ]]; then
-        composer global require "phpunit/phpunit=7.4.*"
-      elif [[ ${TRAVIS_PHP_VERSION:0:3} != "5.2" ]]; then
-        composer global require "phpunit/phpunit=4.8.*"
-      fi
   - |
     if [ -f ~/.phpenv/versions/$(phpenv version-name)/etc/conf.d/xdebug.ini ]; then
       phpenv config-rm xdebug.ini
