--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,3 @@
-sudo: false
 dist: trusty
 
 language: php
@@ -16,19 +15,55 @@ cache:
   directories:
     - $HOME/.composer/cache
 
-matrix:
+jobs:
   include:
     - php: 7.4
+      env: WP_VERSION=nightly WP_MULTISITE=0
+    - php: 7.4
+      env: WP_VERSION=nightly WP_MULTISITE=1
+    - php: 7.4
       env: WP_VERSION=latest WP_MULTISITE=0
+    - php: 7.4
+      env: WP_VERSION=latest WP_MULTISITE=1
+    - php: 7.3
+      env: WP_VERSION=latest WP_MULTISITE=0
+    - php: 7.3
+      env: WP_VERSION=latest WP_MULTISITE=1
+    - php: 7.2
+      env: WP_VERSION=latest WP_MULTISITE=0
+    - php: 7.2
+      env: WP_VERSION=latest WP_MULTISITE=1
+    - php: 7.1
+      env: WP_VERSION=latest WP_MULTISITE=0
+    - php: 7.1
+      env: WP_VERSION=latest WP_MULTISITE=1
+    - php: 7.0
+      env: WP_VERSION=latest WP_MULTISITE=0
+    - php: 7.0
+      env: WP_VERSION=latest WP_MULTISITE=1
+    - php: 5.6
+      env: WP_VERSION=latest WP_MULTISITE=0
+    - php: 5.6
+      env: WP_VERSION=latest WP_MULTISITE=1
+    - php: 5.6
+      env: WP_VERSION=4.0 WP_MULTISITE=0
+    - php: 5.6
+      env: WP_VERSION=4.0 WP_MULTISITE=1
+  allow_failures:
+    - php: nightly
+    - php: 7.4
+    - php: 7.3
+    
+install:
+    - if [[ $TRAVIS_PHP_VERSION > '7.2' ]]; then
+        wget -O ~/.phpenv/versions/$(phpenv version-name)/bin/phpunit https://phar.phpunit.de/phpunit-7.phar;
+      fi
+    - if [[ $TRAVIS_PHP_VERSION > '7.2' ]]; then
+        chmod 755 ~/.phpenv/versions/$(phpenv version-name)/bin/phpunit;
+      fi
 
 before_script:
   - export PATH="$HOME/.composer/vendor/bin:$PATH"
-  - |
-       if [[ ${TRAVIS_PHP_VERSION:0:2} == "7." ]]; then
-        composer global require "phpunit/phpunit=7.4.*"
-      elif [[ ${TRAVIS_PHP_VERSION:0:3} != "5.2" ]]; then
-        composer global require "phpunit/phpunit=4.8.*"
-      fi
   - |
     if [ -f ~/.phpenv/versions/$(phpenv version-name)/etc/conf.d/xdebug.ini ]; then
       phpenv config-rm xdebug.ini
@@ -38,7 +73,12 @@ before_script:
   - |
     if [[ ! -z "$WP_VERSION" ]] ; then
       bash bin/install-wp-tests.sh wordpress_test root '' localhost $WP_VERSION
-      composer global require "phpunit/phpunit=4.8.*|5.7.*|7.4.*"
+    fi
+  - l
+    if [[ $TRAVIS_PHP_VERSION > '7.2' ]]; then
+      composer global require "phpunit/phpunit=7.5.*"
+    else
+      composer global require "phpunit/phpunit=5.7.*|7.5.*"
     fi
   - |
     if [[ "$WP_TRAVISCI" == "phpcs" ]] ; then
